--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ import Music from '../components/Music.astro'
     <meta charset='UTF-8' />
     <title>Sofi - Quince Años</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='shortcut icon' href='/butterfly.webp' type='image/webp' />
+    <link rel='icon' href='/mariposa-blanca .webp' type='image/webp' />
   </head>
   <body class='select-none bg-tertiary *:px-4'>
     <Music src='/music/music.mp3' />
