--- a/src/pages/mia.astro
+++ b/src/pages/mia.astro
@@ -45,7 +45,7 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
       <strong class='text-3xl md:text-4xl font-normal'>| 22:00 hs. |</strong>
     </div>
 
-    <img src='/icons/map.gif' class='h-28 md:h-32' />
+    <img src='/icons/map.gif' class='h-24 md:h-32' />
 
     <h3 class='w-full max-w-[650px] text-center text-3xl md:text-4xl'>
       Salón Elegantes
@@ -92,7 +92,7 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
 
       <span class='flex gap-2 md:gap-4'>
         <a
-          href='https://wa.me/+5493571693294'
+          href='https://wa.me/+5493571356409?text=%C2%A1Hola!%20Quiero%20confirmar%20mi%20asistencia%20a%20tu%20cumplea%C3%B1os.%20Somos:%20'
           class='flex items-center gap-2 rounded-full bg-primary px-8 py-2 text-lg text-white transition-opacity ease-in-out hover:opacity-85 md:px-10 md:text-xl'
           target='_blank'
         >
@@ -100,7 +100,7 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
           MIA
         </a>
         <a
-          href='https://wa.me/+5493571698886'
+          href='https://wa.me/+5493571557663?text=%C2%A1Hola!%20Quiero%20confirmar%20mi%20asistencia%20al%20cumplea%C3%B1os%20de%20M%C3%ADa.%20Somos:%20'
           class='flex items-center gap-2 rounded-full bg-primary px-8 py-2 text-lg text-white transition-opacity ease-in-out hover:opacity-85 md:px-10 md:text-xl'
           target='_blank'
         >
@@ -133,7 +133,7 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
     </h3>
 
     <span class='flex flex-col items-center gap2 text-xl md:text-2xl'>
-      <p>Elegante</p>
+      <p>Elegante.</p>
       <p>No ir de plateado ni dorado.</p>
     </span>
 
@@ -200,6 +200,33 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
     />
   </section>
 
+  <section
+    class='relative pb-12 flex flex-col items-center justify-center bg-[#f7f1df]'
+  >
+    <img src='/icons/festival.gif' class='h-28 md:h-32' />
+
+    <h3 class='w-full text-center text-4xl md:text-6xl mb-12 font-adelia'>
+      Música
+    </h3>
+
+    <a
+      href='https://wa.me/+5493571356409?text=Hola%20M%C3%ADa!%20La%20noche%20de%20tu%20fiesta,%20me%20encantar%C3%ADa%20escuchar%20la%20canci%C3%B3n...%0A'
+      class='flex items-center gap-2 rounded-full bg-primary px-8 py-2 text-lg text-white transition-opacity ease-in-out hover:opacity-85 md:px-10 md:text-xl'
+      target='_blank'
+    >
+      ¿Qué Canción no Debe Faltar?
+    </a>
+
+    <img
+      src='/grupo_mariposas.webp'
+      class='absolute top-0 left-0 h-4/5 hidden md:block'
+    />
+    <img
+      src='/mariposa-marron-cortada.webp'
+      class='absolute bottom-0 right-0 h-4/5 hidden md:block'
+    />
+  </section>
+
   <section class='flex flex-col relative items-center gap-8 py-16'>
     <img src='/icons/photo.gif' class='h-28 md:h-36' />
 
@@ -208,16 +235,19 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
     </h3>
 
     <span
-      class='flex flex-col items-center gap2 text-xl md:text-2xl w-full max-w-[550px] text-center text-pretty'
+      class='flex flex-col items-center gap-4 text-xl md:text-2xl w-full max-w-[550px] text-center text-pretty'
     >
       <p class='mb-2'>
-        Pueden usar mi # en todas sus publicaciones de instagram <strong
-          >#miaquincefest</strong
-        >.
+        Como no quiero perderme ningún detalle de esta noche, te invito a que
+        compartas las fotos y me ayudes a inmortalizar estos momentos.
       </p>
+
+      <strong class='text-3xl'>@misxvmia</strong>
     </span>
 
-    <h3 class='w-full text-center text-3xl md:text-4xl mb-12 font-adelia mt-8'>
+    <h3
+      class='w-full text-center text-3xl md:text-4xl mb-12 font-adelia mt-8 leading-relaxed'
+    >
       Te espero para pasar una noche inolvidable!
     </h3>
 
