--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,10 @@
 <footer class='flex justify-center bg-[#212121] py-2'>
-  <p class='mt-1 text-xl text-white'>
+  <p class='mt-1 text-lg text-white'>
     Hecho por
     <a
       href='https://facucarrion.netlify.app'
       class='font-medium underline'
+      target='_blank'
     >
       Facu Carrion
     </a>
