--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,9 +7,11 @@ import Music from '../components/Music.astro'
 <html lang='es'>
   <head>
     <meta charset='UTF-8' />
-    <title>Sofi - Quince Años</title>
+    <title>Mía - Quince Años</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <link rel='icon' href='/mariposa-blanca .webp' type='image/webp' />
+    <meta property='og:title' content='Mía - Quince Años' />
+    <meta property='og:image' content='/og.webp' />
   </head>
   <body class='select-none bg-tertiary *:px-4'>
     <Music src='/music/music.mp3' />
