--- a/src/pages/mia-quince.astro
+++ b/src/pages/mia-quince.astro
@@ -35,7 +35,8 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
     class='flex flex-col relative items-center gap-8 py-16 font-mallorga'
   >
     <h3 class='w-full max-w-[650px] text-center text-2xl md:text-3xl mb-6'>
-      Quiero que seas parte de este momento tan importante para mi!
+      Hay momentos inolvidables que se atesoran en el corazón para siempre. Por
+      esa razón, quiero que compartas este día tan especial: Mis 15 años.
     </h3>
 
     <img src='/icons/calendar.gif' class='h-28 md:h-32' />
@@ -45,7 +46,8 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
       <strong class='text-3xl md:text-4xl font-normal'>| 21:00 hs. |</strong>
 
       <p class='text-xl md:text-2xl text-center text-pretty'>
-        Por favor ser puntuales.
+        Cada minuto cuenta en esta noche especial. Te esperamos puntual para
+        vivir esta fiesta de principio a fin.
       </p>
     </div>
 
@@ -68,12 +70,12 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
 
     <img
       src='/imagen-izquierda.webp'
-      class='absolute bottom-0 left-0 h-2/5 md:h-4/5 -z-10'
+      class='absolute bottom-0 left-0 h-full md:h-4/5 -z-10'
     />
 
     <img
       src='/imagen-derecha.webp'
-      class='absolute top-0 right-0 h-2/5 md:h-4/5 -z-10'
+      class='absolute top-0 right-0 h-full md:h-4/5 -z-10'
     />
 
     <img
@@ -85,7 +87,7 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
   <section
     class='relative flex flex-col items-center gap-16 py-16 bg-[#f7f1df]'
   >
-    <div class='flex flex-col items-center gap-6'>
+    <div class='flex flex-col items-center gap-2'>
       <img src='/icons/email.gif' class='h-28 md:h-36' />
 
       <h2
@@ -95,34 +97,35 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
       </h2>
 
       <p class='text-center text-xl md:text-2xl font-light'>
-        Confirmá tu asistencia a través de WhatsApp.
+        Confirmá tu asistencia antes del
+        <strong class='font-semibold'>10/03</strong> haciendo click aquí.
       </p>
 
       <span class='flex gap-2 md:gap-4'>
         <a
-          href='https://wa.me/+5493571356409?text=%C2%A1Hola!%20Quiero%20confirmar%20mi%20asistencia%20a%20tu%20cumplea%C3%B1os.%20Somos:%20'
+          href='https://docs.google.com/forms/d/e/1FAIpQLScs3H2hPeas0hIvXFDA3UDadBJ-P4ZcddzoAyCYrgvNXdh9Rw/viewform?usp=header'
           class='flex items-center gap-2 rounded-full bg-primary px-8 py-2 text-lg text-white transition-opacity ease-in-out hover:opacity-85 md:px-10 md:text-xl'
           target='_blank'
         >
-          <WhatsApp class='size-6 stroke-white md:size-8' />
-          MIA
-        </a>
-        <a
-          href='https://wa.me/+5493571557663?text=%C2%A1Hola!%20Quiero%20confirmar%20mi%20asistencia%20al%20cumplea%C3%B1os%20de%20M%C3%ADa.%20Somos:%20'
-          class='flex items-center gap-2 rounded-full bg-primary px-8 py-2 text-lg text-white transition-opacity ease-in-out hover:opacity-85 md:px-10 md:text-xl'
-          target='_blank'
-        >
-          <WhatsApp class='size-6 stroke-white md:size-8' />
-          ROMINA
+          FORMULARIO
         </a>
       </span>
     </div>
 
     <div class='flex flex-col items-center'>
       <strong class='font-semibold text-xl'>Valor de la Tarjeta</strong>
-      <p class='text-xl'>Mayores: $40.000</p>
-      <p class='text-xl'>Menores (4-12 años): $25.000</p>
-      <p class='text-xl'>Adolescentes (13-18 años): $15.000</p>
+      <p class='text-xl'>Mayores: $51.000</p>
+      <p class='text-xl'>Adolescentes (13-17 años): $26.000</p>
+      <p class='text-xl'>Menores (4-13 años): $12.000</p>
+      <p class='text-xl'>Menores de 3 años: Sin costo</p>
+    </div>
+
+    <div class='flex flex-col items-center'>
+      <strong class='font-semibold text-xl'>Datos de Transferencia</strong>
+      <p class='text-xl'>ALIAS: ROMICASTILLO18.UALA</p>
+      <p class='text-xl'>CVU: 0000007900273147977908</p>
+      <p class='text-xl'>Nombre: Romina Castillo</p>
+      <p class='text-xl'>CUIL: 27-31479779-0</p>
     </div>
 
     <img
@@ -142,17 +145,20 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
 
     <span class='flex flex-col items-center gap2 text-xl md:text-2xl'>
       <p>Elegante.</p>
-      <p>No ir de plateado ni dorado.</p>
+      <p class='text-center'>
+        El color plateado y dorado está reservado para la protagonista de la
+        noche.
+      </p>
     </span>
 
     <img
       src='/imagen-izquierda.webp'
-      class='absolute w-2/5 -z-10 right-0 bottom-0 scale-x-[-1]'
+      class='absolute w-full -z-10 right-0 bottom-0 scale-x-[-1]'
     />
 
     <img
       src='/imagen-derecha.webp'
-      class='absolute h-full -z-10 left-0 top-0 scale-x-[-1]'
+      class='absolute w-full -z-10 left-0 top-0 scale-x-[-1]'
     />
 
     <img
@@ -165,16 +171,28 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
     class='relative py-12 flex flex-col items-center justify-center bg-[#f7f1df]'
   >
     <div
-      class='row-auto grid w-full grid-cols-2 gap-6 md:max-w-[1200px] md:grid-cols-4 md:grid-rows-2'
+      class='grid w-full gap-6 md:max-w-[1200px] md:grid-cols-2 md:auto-rows-[minmax(200px,_auto)]'
     >
-      <img src='/gallery/1.webp' />
-      <img src='/gallery/2.webp' />
-      <img src='/gallery/3.webp' />
-      <img src='/gallery/4.webp' />
-      <img src='/gallery/5.webp' />
-      <img src='/gallery/6.webp' />
-      <img src='/gallery/7.webp' />
-      <img src='/gallery/8.webp' />
+      <div class='grid grid-cols-2 gap-6'>
+        <img src='/gallery/1.webp' class='w-full h-full object-cover' />
+        <img src='/gallery/2.webp' class='w-full h-full object-cover' />
+      </div>
+      <img
+        src='/gallery/3.webp'
+        class='w-full h-full object-cover md:col-span-2'
+      />
+      <div class='grid grid-cols-2 gap-6'>
+        <img src='/gallery/4.webp' class='w-full h-full object-cover' />
+        <img src='/gallery/5.webp' class='w-full h-full object-cover' />
+      </div>
+      <img
+        src='/gallery/6.webp'
+        class='w-full h-full object-cover md:col-span-2'
+      />
+      <div class='grid grid-cols-2 gap-6'>
+        <img src='/gallery/7.webp' class='w-full h-full object-cover' />
+        <img src='/gallery/8.webp' class='w-full h-full object-cover' />
+      </div>
     </div>
   </section>
 
@@ -265,12 +283,12 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
 
     <img
       src='/imagen-izquierda.webp'
-      class='absolute bottom-0 right-0 h-2/5 md:h-4/5 -z-10 scale-x-[-1]'
+      class='absolute bottom-0 right-0 h-full md:h-4/5 -z-10 scale-x-[-1]'
     />
 
     <img
       src='/imagen-derecha.webp'
-      class='absolute top-0 left-0 h-2/5 md:h-4/5 -z-10 scale-x-[-1]'
+      class='absolute top-0 left-0 h-full md:h-4/5 -z-10 scale-x-[-1]'
     />
 
     <img
