--- a/src/pages/mia-quince.astro
+++ b/src/pages/mia-quince.astro
@@ -161,10 +161,7 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
       class='absolute w-full -z-10 left-0 top-0 scale-x-[-1]'
     />
 
-    <img
-      src='/mariposa-blanca.webp'
-      class='absolute right-5 bottom-5 h-40 scale-x-[-1] hidden md:block'
-    />
+    <img src='/mariposa-blanca.webp' class='absolute top-5 left-5 h-32 z-10' />
   </section>
 
   <section
@@ -220,10 +217,7 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
       src='/grupo_mariposas.webp'
       class='absolute top-0 left-0 h-4/5 hidden md:block'
     />
-    <img
-      src='/mariposa-marron-cortada.webp'
-      class='absolute bottom-0 right-0 h-4/5 hidden md:block'
-    />
+    <img src='/mariposa-marron.webp' class='absolute top-0 left-0 h-32' />
   </section>
 
   <section
@@ -268,9 +262,7 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
         compartas las fotos y me ayudes a inmortalizar estos momentos.
       </p>
 
-      <a href='https://instagram.com/misxvmia'
-        ><strong class='text-3xl'>@misxvmia</strong></a
-      >
+      <strong class='text-3xl'>#misxvmia</strong>
     </span>
 
     <h3
@@ -291,10 +283,7 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
       class='absolute top-0 left-0 h-full md:h-4/5 -z-10 scale-x-[-1]'
     />
 
-    <img
-      src='/mariposa-blanca.webp'
-      class='absolute hidden md:block bottom-10 left-10 h-48'
-    />
+    <img src='/mariposa-blanca.webp' class='absolute top-5 left-5 h-32' />
   </section>
 
   <Footer />
