--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,9 +9,11 @@ import Music from '../components/Music.astro'
     <meta charset='UTF-8' />
     <title>Mía - Quince Años</title>
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='icon' href='/mariposa-blanca .webp' type='image/webp' />
+    <link rel='icon' href='/mariposa-blanca.webp' type='image/webp' />
     <meta property='og:title' content='Mía - Quince Años' />
-    <meta property='og:image' content='/og.webp' />
+    <meta property='og:image' content='https://invita-me.vercel.app/og.webp' />
+    <meta property='og:type' content='website' />
+    <meta property='og:url' content='https://invita-me.vercel.app/mia-quince' />
   </head>
   <body class='select-none bg-tertiary *:px-4'>
     <Music src='/music/music.mp3' />
