--- a/src/pages/mia-quince.astro
+++ b/src/pages/mia-quince.astro
@@ -1,15 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Instagram from '../components/Instagram.astro'
-import Thanks from '../components/Thanks.astro'
 import Footer from '../components/Footer.astro'
 import ArrowDown from '../components/icons/ArrowDown.astro'
-import WhatsApp from '../components/icons/WhatsApp.astro'
 ---
 
 <Layout>
   <section
-    class='relative flex h-screen flex-col items-center justify-center'
+    class='relative flex h-screen flex-col items-center justify-center bg-[#f7f1df] bg-cover sm:bg-contain'
     id='hero'
   >
     <ArrowDown
@@ -302,7 +299,6 @@ import WhatsApp from '../components/icons/WhatsApp.astro'
     background-image: url('/background.webp');
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover;
   }
 
   @keyframes bounce {
