--- a/src/pages/mia-quince.astro
+++ b/src/pages/mia-quince.astro
@@ -112,7 +112,7 @@ import ArrowDown from '../components/icons/ArrowDown.astro'
     <div class='flex flex-col items-center'>
       <strong class='font-semibold text-xl'>Valor de la Tarjeta</strong>
       <p class='text-xl'>Mayores: $51.000</p>
-      <p class='text-xl'>Adolescentes (13-17 años): $26.000</p>
+      <p class='text-xl'>Adolescentes (14-17 años): $26.000</p>
       <p class='text-xl'>Menores (4-13 años): $12.000</p>
       <p class='text-xl'>Menores de 3 años: Sin costo</p>
     </div>
@@ -260,6 +260,7 @@ import ArrowDown from '../components/icons/ArrowDown.astro'
       </p>
 
       <strong class='text-3xl'>#misxvmia</strong>
+      <strong class='text-3xl'>@miamartin_1</strong>
     </span>
 
     <h3
