music and some fixes

--- a/src/pages/helena-quince.astro
+++ b/src/pages/helena-quince.astro
@@ -43,18 +43,18 @@ import Instagram from '../components/icons/Instagram.astro'
     <img src='/helena/botones_der.webp' class='h-6' alt='' />
 
     <audio controls id='music' class='hidden'>
-      <source src='/music/music.mp3' type='audio/mpeg' />
+      <source src='/music/helena.mp3' type='audio/mpeg' />
 
       Your browser does not support the audio element.
     </audio>
   </section>
 
-  <section class='flex flex-col relative items-center gap-8 py-16 font-audrey'>
-    <p class='text-xl text-center text-pretty'>
-      La vida es un camino lleno de luces...<br />
-      y mis <strong class='text-lg'>15</strong> será una de las más brillantes <br
-      />
-      ¡Vení a festejarlo conmigo!
+  <section class='flex flex-col relative items-center gap-8 py-32 font-audrey'>
+    <p class='text-2xl text-center text-pretty'>
+      La vida es un camino <br />
+      lleno de luces... y mis quince <br />
+      será una de las más brillantes. <br />
+      Vení a festejarlo conmigo!
     </p>
 
     <img
@@ -99,8 +99,10 @@ import Instagram from '../components/icons/Instagram.astro'
     class='flex flex-col relative items-center gap-8 pt-16 pb-40 font-audrey bg-helena-background text-helena-primary [&>*]:z-20 [&>img]:z-10'
   >
     <h3 class='w-full max-w-[650px] text-center text-2xl mb-6'>
-      Cada minuto cuenta en esta noche especial. Te esperamos puntual para vivir
-      esta fiesta <br />
+      Cada minuto cuenta <br />
+      en esta noche especial. <br />
+      Te esperamos puntual <br />
+      para vivir esta fiesta <br />
       de principio a fin.
     </h3>
 
@@ -108,13 +110,13 @@ import Instagram from '../components/icons/Instagram.astro'
       <p class='text-2xl font-regular'>SÁBADO 05 DE JULIO</p>
       <strong class='text-2xl font-normal'>21:30 hs.</strong>
       <p class='text-2xl font-regular'>SALÓN 1929</p>
-      <p class='text-2xl font-regular'>(Uruguay 447. Río Tercero)</p>
+      <p class='text-2xl font-regular'>Uruguay 447. Río Tercero.</p>
     </div>
 
     <img src='/icons/map.gif' class='h-24 md:h-32' />
 
     <a
-      href='https://maps.app.goo.gl/k6mukjb5fBuu9vNdA'
+      href='https://maps.app.goo.gl/3MoH3JCvYvp4FjT66'
       class='rounded-lg bg-helena-font font-sans px-8 py-2 text-xl text-helena-primary transition-opacity ease-in-out hover:opacity-85 md:px-10 md:text-xl'
     >
       CÓMO LLEGAR
@@ -158,7 +160,7 @@ import Instagram from '../components/icons/Instagram.astro'
     </p>
 
     <a
-      href='https://wa.me/+5493571356409?text=Hola%20M%C3%ADa!%20La%20noche%20de%20tu%20fiesta,%20me%20encantar%C3%ADa%20escuchar%20la%20canci%C3%B3n...%0A'
+      href='https://wa.me/+5493571563307?text=Hola%20M%C3%ADa!%20La%20noche%20de%20tu%20fiesta,%20me%20encantar%C3%ADa%20escuchar%20la%20canci%C3%B3n...%0A'
       class='flex items-center gap-2 rounded-lg bg-helena-font text-helena-primary px-8 py-2 text-lg transition-opacity ease-in-out hover:opacity-85 md:px-10 md:text-xl z-20'
       target='_blank'
     >
@@ -175,14 +177,13 @@ import Instagram from '../components/icons/Instagram.astro'
   <hr id='divisor' />
 
   <section
-    class='flex flex-col relative items-center py-24 bg-helena-background [&>img]:z-10 [&>*]:z-20'
+    class='flex flex-col relative items-center py-32 bg-helena-background [&>img]:z-10 [&>*]:z-20'
   >
     <p class='mb-12 text-2xl text-center text-pretty font-audrey'>
-      Como no quiero perder ningún detalle <br />
-      de esta fiesta, te invito a compartir <br />
-      tus fotos y me ayudes a inmortalizar <br />
-      estos momentos <br />
-      ¡Etiquetame!
+      Como no quiero perder ningún detalle de esta fiesta, <br />
+      te invito a compartir tus fotos <br />
+      y me ayudes a inmortalizar <br />
+      estos momentos. <br /> Etiquetame!
     </p>
 
     <span class='p-1 mb-4 bg-helena-font rounded-xl'>
@@ -227,9 +228,7 @@ import Instagram from '../components/icons/Instagram.astro'
   <section
     class='relative flex flex-col items-center gap-8 pt-24 pb-40 bg-helena-background'
   >
-    <h2
-      class='text-center text-7xl font-bacalisties tracking-wider text-helena-primary'
-    >
+    <h2 class='text-center text-7xl font-bacalisties text-helena-primary'>
       Asistencia
     </h2>
 
